[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotforge"
version = "0.1.0"
description = "Turn a single sentence into a polished, narrated storyboard video."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }  # This is actually correct, but the error is about how it's processed
# Use SPDX identifier instead (modern approach):
# license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # Remove this since we're using SPDX license identifier:
    # "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0", # For image handling
    "moviepy>=1.0.0", # For video export
    "requests>=2.31.0", # For API calls to OpenRouter
    "tqdm>=4.65.0", # For progress bars
]

[project.scripts]
spotforge = "spotforge.cli:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0", # Code formatter
    "flake8>=6.0.0", # Linter
]
narration = [
    # "elevenlabs>=0.2.0", # Or the appropriate SDK if available
]

# Add this to explicitly control package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["spotforge*"]
exclude = ["cache*", "inputs*", "panels*", "exports*"]